tests/testcases/errors/BCE0137-1.boo
"""
BCE0137-1.boo(10,7): BCE0137: Property 'Foo.Bar' is write only.
"""
class Foo:
	Bar as string:
		set:
			print value

foo = Foo()
print foo.Bar
